@@ -1,4 +1,3 @@
 # svn ps -F EXTERNALS.txt svn:externals . 
-grokcore.component svn://svn.zope.org/repos/main/grokcore.component/trunk
-grokcore.view svn://svn.zope.org/repos/main/grokcore.view/trunk
-martian svn://svn.zope.org/repos/main/martian/trunk
+grokcore.view svn://svn.zope.org/repos/main/grokcore.view/branches/sylvain-five-grok-static
+grokcore.formlib svn://svn.zope.org/repos/main/grokcore.formlib/trunk 
